--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="app"></div>
   <form
     oninput="rangeParam.value=d3.format(',')(parseInt(linksRange.value))" style="width: 99%;" hidden>
-    <label for="linksRange">links(nodes)</label>
+    <label for="linksRange">links</label>
     <output name="rangeParam">100</output>
     <input type="range" name="linksRange" min=0 max=99999 value=100 step=100 autocomplete="off" style="width: 100%;"></input>
     <script src="./js/main.js"></script>
